<resources>
    <string name="app_name">ClientService</string>
    <string name="stop_service">Остановить сервис</string>
    <string name="hint_name">Введите полное имя клиента</string>
    <string name="hint_phone">Введите номер телефона клиента</string>
    <string name="hint_time_date">Введите дату и время последнего звонка</string>
    <string name="hint_note">Введите комментарий</string>
    <string name="alarm_set">Задайте время повторения</string>
    <string name="add_client">Добавления клиента</string>
    <string name="alarm_note">Напомнить через</string>
    <string name="msg_client_add">Клиент добавлен в базу</string>
    <string name="login">Введите логин</string>
    <string name="passwords">Введите пароль</string>
    <string name="loginbutton">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="err_msg_nick">Введите логин</string>
    <string name="err_msg_passwords">Введите пароль</string>
    <string name="hint_login_add">Придумайте логин</string>
    <string name="hint_passwords_add">Придумайте пароль</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="user_add">Добавление пользователя</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="err_user">Пользователя с данным логином не существует. Зарегистрируйте нового пользователя.</string>
    <string name="check_state_login">Оставлять авторизованным</string>
    <string name="err_chk_login">Введите корректный логин и пароль</string>
    <string name="true_chk_login">Автоматический вход включён</string>
    <string name="false_chk_login">Автоматический вход выключен</string>
    <string name="spisok_client">Список клиентов</string>
    <string name="callended">Последний звонок в</string>
    <string name="editClient">Редактировать данные о клиенте</string>
    <string name="deleteClient">Удалить данные о клиенте</string>
    <string name="titleUpdateClient">Выберите действие с данными о клиенте</string>
    <string name="closeClient">Отложить напоминания</string>
    <string name="exitClient">Отменить напоминания</string>
    <string name="one">1 мин</string>
    <string name="five">5 мин</string>
    <string name="ten">10 мин</string>
    <string name="set_alarm">Устанвоить дату и время</string>
    <string name="fio_edit_client">ФИО клиента</string>
    <string name="phone_edit_client">Номер телефона клиента</string>
    <string name="time_date_edit_client">Время и дата напоминания</string>
    <string name="note_edit_client">Комментарий</string>

    <string-array name="checkListClient">
        <item>Весь список</item>
        <item>Не просроченные</item>
        <item>Отменённые</item>
        <item>Просроченные</item>
    </string-array>

    <string-array name="timeAlarmSet">
        <item>1 мин</item>
        <item>5 мин</item>
        <item>10 мин</item>
        <item>30 мин</item>
        <item>1 час</item>
        <item>Своё время</item>

    </string-array>
</resources>
