<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.lykashenko.clientservice.Fragments.LoginFragment">

    <android.support.design.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/coordinatorLayoutClient">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="by.lykashenko.clientservice.MainActivity">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"
                        android:singleLine="true"
                        android:hint="@string/login" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_passwords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/input_passwords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:hint="@string/passwords" />
                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_state_login"
                    android:id="@+id/checkBoxStateLogin"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:textSize="18dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loginbutton"
                    android:id="@+id/buttonLogin"
                    android:textSize="@dimen/textButtonLoginSize"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/register"
                    android:id="@+id/register"
                    android:textAlignment="center"
                    android:textColor="@color/colorTextRegister"
                    android:layout_marginTop="10dp" />


            </LinearLayout>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>


</FrameLayout>
